--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ['3.9', '3.10', '3.11', '3.12', 'pypy-3.9', 'pypy-3.10', 'pypy-3.11', 'pypy-3.12',]
+        python-version: ['3.9', '3.10', '3.11', '3.12', 'pypy-3.9', 'pypy-3.10']
         include:
           - {python-version: '3.9', python-tox-version: 'py39'}
           - {python-version: '3.10', python-tox-version: 'py310'}
@@ -18,8 +18,6 @@ jobs:
           - {python-version: '3.12', python-tox-version: 'py312'}
           - {python-version: 'pypy-3.9', python-tox-version: 'pypy39'}
           - {python-version: 'pypy-3.10', python-tox-version: 'pypy310'}
-          - {python-version: 'pypy-3.11', python-tox-version: 'pypy311'}
-          - {python-version: 'pypy-3.12', python-tox-version: 'pypy312'}
 
     steps:
     - uses: actions/checkout@v3
